prevent wrong colors in dark mode

--- a/frontend/stylesheets/main.less
+++ b/frontend/stylesheets/main.less
@@ -612,7 +612,8 @@ i.without-icon-margin,
 .login-view {
 
   & {
-    height: calc(100vh - 48px);
+    height: 100%;
+    min-height: calc(100vh - 48px);
     background-color: @primary-color;
     background-image: url(/assets/images/background_neurons_drawn.svg);
     background-size: cover;
@@ -623,6 +624,10 @@ i.without-icon-margin,
     background-color: white;
     width: 600px;
     padding: 100px; 
+
+    h3 {
+      color: @black // always enforce dark text color to prevent dark mode bugs
+    }
 
     @media @smartphones {
       padding: 20px;
